implemented crud over drones
